Updated build.gradle to maintain Java 11 compatibility